--- a/index.html
+++ b/index.html
@@ -77,3 +77,20 @@
     </style>
 </head>
 <body>
+
+    <div class="container">
+        <h1>FitData Insights</h1>    
+    </div>
+
+    <div class="dashboard-container">
+
+        
+        <iframe src="https://lookerstudio.google.com/embed/reporting/c13bbe61-7c91-49a4-ba19-5abaa796d52d/page/Y0GmC"
+                allowfullscreen 
+                sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
+        </iframe>
+    </div>
+
+
+</body>
+</html>
