--- a/index.html
+++ b/index.html
@@ -1,96 +1,37 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Analytics</title>
+    <title>Looker Studio Dashboard</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
+        * {
             margin: 0;
             padding: 0;
+            border: 0;
+            overflow: hidden;
         }
-
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        p {
-            color: #555;
-            font-size: 18px;
-        }
-
-        .dashboard-container {
+        
+        html, body {
+            width: 100%;
+            height: 100%;
+            background: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
         }
 
         iframe {
-            width: 90%;
-            height: 80vh;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        .doc-link {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px; /* Más espacio interno */
-            font-size: 24px; /* Fuente más grande */
-            font-weight: bold;
-            color: #fff;
-            background-color: #007bff;
-            text-decoration: none;
-            border-radius: 10px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-            min-width: 250px; /* Ancho mínimo */
-            text-align: center;
-        }
-
-        .doc-link:hover {
-            background-color: #0056b3;
-            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .pdf-container {
-            margin-top: 40px;
-        }
-
-        .pdf-frame {
-            width: 80%;
-            height: 600px;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+            width: 100vw;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-
-    <div class="container">
-        <h1>FitData Insights</h1>    
-    </div>
-
-    <div class="dashboard-container">
-
-        
-        <iframe src="https://lookerstudio.google.com/embed/reporting/c13bbe61-7c91-49a4-ba19-5abaa796d52d/page/Y0GmC"
-                allowfullscreen 
-                sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
-        </iframe>
-    </div>
-
-
+    <iframe 
+        src="https://lookerstudio.google.com/embed/reporting/c13bbe61-7c91-49a4-ba19-5abaa796d52d/page/Y0GmC"
+        allowfullscreen
+        sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
+    </iframe>
 </body>
 </html>
