--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrega 2 - PDF</title>
+    <title>Looker Studio Dashboard</title>
     <style>
         * {
             margin: 0;
@@ -15,38 +15,23 @@
         html, body {
             width: 100%;
             height: 100%;
-            background: #f4f4f4;
+            background: #fff;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
         }
 
         iframe {
-            width: 90%;
-            height: 90vh;
-            border: 1px solid #ccc;
-        }
-
-        .download-link {
-            margin-top: 10px;
-            font-size: 16px;
+            width: 100vw;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-
     <iframe 
-        src="https://github.com/usuario/repositorio/raw/main/Entrega%202.pdf"
-        width="100%"
-        height="100%">
+        src="https://lookerstudio.google.com/embed/reporting/c13bbe61-7c91-49a4-ba19-5abaa796d52d/page/Y0GmC"
+        allowfullscreen
+        sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
     </iframe>
-
-    <p class="download-link">
-        <a href="https://github.com/usuario/repositorio/raw/main/Entrega%202.pdf" target="_blank">
-            📥 Descargar PDF
-        </a>
-    </p>
-
 </body>
 </html>
