--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         allowfullscreen
         sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-forms">
     </iframe>
-<iframe 
-    src="https://github.com/hugoruizb/Proyecto-VyS/edit/main/Entrega%202.pdf"
-    width="100%"
-    height="100%">
-</iframe>
+    <iframe 
+        src="https://github.com/hugoruizb/Proyecto-VyS/edit/main/Entrega%2.pdf"
+        widt="100%"
+        height="100%">
+    </iframe>
 </body>
 </html>
