--- a/index.html
+++ b/index.html
@@ -23,10 +23,20 @@
             text-align: center;
         }
 
-        .dashboard-container, .pdf-container {
+        .dashboard-container {
             width: 100%;
             max-width: 1800px;
-            height: 100vh;
+            height: 120vh;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .pdf-container {
+            width: 100%;
+            max-width: 1800px;
+            height: 80vh;
             margin: 10px 0;
             border: 1px solid #ccc;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
