--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         </iframe>
     </div>
 
+
+    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/raw/main/Entrega%202.pdf" target="_blank">
+        📄 Descargar documentación en PDF
+    </a>
+
+    
     <title>Documentación</title>
     
     </a>
