--- a/index.html
+++ b/index.html
@@ -15,32 +15,25 @@
         html, body {
             width: 100%;
             height: 100%;
-            background: #fff;
+            background: #f8f9fa;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
+            font-family: Arial, sans-serif;
         }
 
-        .dashboard-container {
+        .dashboard-container, .pdf-container {
             width: 100%;
-            max-width: 1800px;
-            height: 180vh;
-            margin: 10px 0;
+            max-width: 1200px;
+            height: 90vh;
+            margin: 20px 0;
             border: 1px solid #ccc;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
             overflow: hidden;
-        }
-        
-        .pdf-container {
-            width: 100%;
-            max-width: 1800px;
-            height: 80vh;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
+            background: #fff;
         }
 
         iframe {
@@ -51,12 +44,14 @@
 
         .doc-link {
             display: inline-block;
-            margin: 10px;
-            padding: 10px 20px;
+            margin: 20px;
+            padding: 12px 24px;
             background: #007bff;
             color: #fff;
             text-decoration: none;
+            font-size: 16px;
             border-radius: 5px;
+            transition: background 0.3s ease;
         }
 
         .doc-link:hover {
@@ -66,6 +61,7 @@
 </head>
 <body>
 
+    <!-- Contenedor del Dashboard -->
     <div class="dashboard-container">
         <iframe 
             src="https://lookerstudio.google.com/embed/reporting/c13bbe61-7c91-49a4-ba19-5abaa796d52d/page/Y0GmC"
@@ -74,22 +70,15 @@
         </iframe>
     </div>
 
-
-    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/raw/main/Entrega%202.pdf" target="_blank">
+    <!-- Enlace de descarga del PDF -->
+    <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/main/Entrega%202.pdf" target="_blank">
         📄 Descargar documentación en PDF
     </a>
 
-    <!--
-    <title>Documentación</title>
-    
-    </a>
-
+    <!-- Contenedor del PDF -->
     <div class="pdf-container">
-        <iframe 
-            src="https://docs.google.com/gview?url=https://github.com/hugoruizb/Proyecto-VyS/raw/main/Entrega%202.pdf&embedded=true">
-        </iframe>
+        <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/main/Entrega%202.pdf&embedded=true"></iframe>
     </div>
-    -->>
 
 </body>
 </html>
