--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
             background: #f8f9fa;
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
             text-align: center;
             font-family: Arial, sans-serif;
         }
 
-        .dashboard-container, .pdf-container {
+        .dashboard-container {
             width: 100%;
             max-width: 1200px;
             height: 90vh;
@@ -74,11 +73,6 @@
     <a class="doc-link" href="https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/main/Entrega%202.pdf" target="_blank">
         📄 Descargar documentación en PDF
     </a>
-
-    <!-- Contenedor del PDF -->
-    <div class="pdf-container">
-        <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/hugoruizb/Proyecto-VyS/main/Entrega%202.pdf&embedded=true"></iframe>
-    </div>
 
 </body>
 </html>
